<resources>
    <string name="app_name">DevConnect</string>
    <string name="notification_channel_name">DevConnect notification</string>
    <string name="notification_channel_description">general notifications</string>
    <string name="hint_text_email">Email</string>
    <string name="hint_text_password">Password</string>
    <string name="register">Sign Up</string>
    <string name="date_not_specified">not specified</string>
    <string name="not_registered_yet">No account yet?</string>
    <string name="sign_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="hint_text_first">First</string>
    <string name="hint_text_last">Last</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="inbox">Inbox</string>
    <string name="tab_new">New</string>
    <string name="tab_top">Top</string>
    <string name="explore">EXPLORE</string>
    <string name="copy_summary">Project: %1$s\nby %2$s\n\nSummary: %3$s.\n\nExplore this great project and many more at DevConnect! Download now</string>
    <string name="share">Share</string>
    <string name="save_post">Save post</string>
    <string name="filters">Filters</string>
    <string name="search_in">Search in:</string>
    <string name="titles">Titles</string>
    <string name="posts">Posts</string>
    <string name="location">Location</string>
    <string name="locate_me">Locate me</string>
    <string name="posted_at">Posted at</string>
    <string name="add_key_word_content_discrpition">add key word</string>
    <string name="add">ADD</string>
    <string name="keywords">Keywords</string>
    <string name="search">Search</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="slogan_step_one">Kick off</string>
    <string name="title">Project Title</string>
    <string name="helper_text_title">e.g. Architecture Graduation Project</string>
    <string name="helper_text_desciption">summarize your project</string>
    <string name="description">Description</string>
    <string name="step_one_subtitle">Project goals</string>
    <string name="goal">Goal</string>
    <string name="text_helper_goal">a desired result</string>
    <string name="previous">PREVIOUS</string>
    <string name="next">NEXT</string>
    <string name="publish">PUBLISH</string>
    <string name="undo">UNDO</string>
    <string name="error_empty_title">Title cannot be empty</string>
    <string name="error_empty_description">Description cannot be empty</string>
    <string name="error_items_max">Maximum 5, remove then add</string>
    <string name="error_items_empty">add text first</string>
    <string name="toast_goal_removed">Goal removed</string>
    <string name="toast_activity_removed">Activity removed</string>
    <string name="toast_position_removed">Position removed</string>
    <string name="step_two_subtitle">Project Activities</string>
    <string name="activity">Activity</string>
    <string name="text_helper_activity">divides working process into units</string>
    <string name="slogan_step_two">Roadmap</string>
    <string name="deadline">Deadline</string>
    <string name="optional">(optional)</string>
    <string name="date_set">Deadline added</string>
    <string name="slogan_step_three">Recruit</string>
    <string name="invite_people">Invite People</string>
    <string name="match">Match</string>
    <string name="step_three_subtitle_positions">Team positions</string>
    <string name="hint_team_position">Team position</string>
    <string name="helper_text_team_position">your crew are your strength</string>
    <string name="more_details">More details</string>
    <string name="helper_text_more_details">Any thing more to say?</string>
    <string name="details">Details</string>
    <string name="slogan_step_four">Last touches</string>
    <string name="add_photo">Add photo</string>
    <string name="change_photo">Tap Here to change photo</string>
    <string name="preview">PREVIEW</string>
    <string name="tags">TAGS</string>
    <string name="tags_min">add 3 tags at least</string>
    <string name="dash">-</string>
    <string name="by">by</string>
    <string name="project_goals">Project goals</string>
    <string name="team_positions">Team positions</string>
    <string name="project_activities">Project activities</string>
    <string name="hiring_status">Hiring status</string>
    <string name="join">JOIN</string>
    <string name="support">SUPPORT</string>
    <string name="alert_support">Support is currently under development\nwould you like to contact %1$ Directly ?</string>
    <string name="chat_support">Hey I would like to offer support for your project %1$ What can I do?</string>
    <string name="request_project_join_content">%1$s requests to join your project : %2$s</string>
    <string name="response_project_join_content">Congratulations\n%1$s accepted your request to join your project : %2$s\a new chat room is created where both of you can discuss work</string>
    <string name="request_project_join_title">Request to join project</string>
    <string name="uploading">uploading</string>
    <string name="loading_more_posts">loading more posts</string>
    <string name="edit_profile">Edit</string>
    <string name="edit">Edit</string>
    <string name="unsave">Remove</string>
    <string name="followers">followers</string>
    <string name="votes">votes</string>
    <string name="published">published</string>
    <string name="saved_projects">saved</string>
    <string name="saved_on">Saved on %1$s</string>
    <string name="published_on">Published on %1$s</string>
    <string name="post_unsaved">post unsaved</string>
    <string name="confirm_delete">Delete post?</string>
    <string name="post_delete_msg">You can edit posts by swiping right</string>
    <string name="delete">delete</string>
    <string name="permission_denied_storage">Permission denied, please grant storage read permission</string>
    <string name="permission_denied_location">Permission denied, please grant location read permission</string>
    <string name="loading_failed">Loading image failed,try again please</string>
    <string name="oops">Oops</string>
    <string name="deleted_project_msg">This project doesn\'t exist any more</string>
    <string name="deleted_project">Deleted project</string>
    <string name="name">Name</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">OR</string>
    <string name="use_phone_number">use phone number</string>
    <string name="send_code">SEND CODE</string>
    <string name="welcome_to">Welcome to DevConnect</string>
    <string name="welcome_slogan">Find your team now !</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="password_helper_text">Make sure it\'s more than 8 characters</string>
    <string name="basic_info">Basic info</string>
    <string name="add_location">Add location</string>
    <string name="apperance_slogan">Help people know you</string>
</resources>