<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/slogan_step_three"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/invite_people"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/optional"
                        android:fontFamily="@font/roboto"
                        android:textColor="@color/textDark"
                        android:layout_marginStart="8dp"
                        android:textSize="12sp"
                        android:alpha="0.5"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <Button
                        android:visibility="gone"
                        android:id="@+id/button_search_share"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/search"/>
                    <Button
                        android:visibility="gone"
                        android:id="@+id/button_match_invite"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/match"/>
                    <Button
                        android:id="@+id/button_share_invite"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/share"/>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/step_three_subtitle_positions"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:layout_marginBottom="16dp"
                    >
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_layout_item"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:boxStrokeWidth="1dp"
                        android:hint="@string/hint_team_position"
                        app:helperText="@string/helper_text_team_position"
                        app:counterMaxLength="60"
                        app:hintEnabled="true"
                        app:helperTextEnabled="true"
                        app:counterEnabled="true"
                        app:errorEnabled="true"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/text_field_item"
                            android:layout_width="match_parent"
                            android:layout_height="56dp"
                            android:maxLines="1"
                            android:lines="1"
                            android:singleLine="true"
                            android:maxLength="60"
                            android:textColor="@color/textDark"
                            android:inputType="textFilter" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <ImageButton
                        android:id="@+id/button_add_item"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_add_circle"
                        android:tint="@color/colorPrimaryLight"
                        android:background="?attr/selectableItemBackgroundBorderless" />
                    <Button
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add"/>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_items"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/list_item_removable"/>
            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</layout>
