<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadeScrollbars="false">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/slogan_step_four"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    android:layout_marginStart="16dp" />
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/step_four_photo"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:background="@color/colorSecondaryDark"
                        />
                <TextView
                    android:id="@+id/button_add_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/add_photo"
                    android:textSize="32sp"
                    android:gravity="center"
                    android:textColor="@color/colorSecondaryLight"
                    android:background="?attr/selectableItemBackground"/>
                    <FrameLayout
                        android:id="@+id/change_photo_bar"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="32dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/textDark"
                            android:alpha="0.6"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/change_photo"
                            android:gravity="start|center"
                            android:paddingStart="8dp"
                            android:textColor="@color/colorSecondaryLight"/>
                    </FrameLayout>

                </FrameLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="16dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/more_details"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/optional"
                        android:fontFamily="@font/roboto"
                        android:textColor="@color/textDark"
                        android:layout_marginStart="8dp"
                        android:textSize="12sp"
                        android:alpha="0.5"/>
                </LinearLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeWidth="1dp"
                    android:hint="@string/details"
                    app:helperText="@string/helper_text_more_details"
                    app:counterMaxLength="500"
                    app:hintEnabled="true"
                    app:helperTextEnabled="true"
                    app:counterEnabled="true"
                    app:errorEnabled="true"
                    android:layout_marginBottom="16dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_field_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="500"
                        android:textColor="@color/textDark"
                        android:maxLines="3"
                        android:inputType="textMultiLine|textNoSuggestions"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/step_four_preview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="48dp"
                    android:textSize="16sp"
                    android:text="@string/preview"/>
            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</layout>
