<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fadeScrollbars="false">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/slogan_step_one"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeWidth="1dp"
                    android:hint="@string/title"
                    app:helperText="@string/helper_text_title"
                    app:counterMaxLength="60"
                    app:hintEnabled="true"
                    app:helperTextEnabled="true"
                    app:counterEnabled="true"
                    app:errorEnabled="true"
                    android:layout_marginBottom="16dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_field_title"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:maxLines="1"
                        android:lines="1"
                        android:singleLine="true"
                        android:maxLength="60"
                        android:textColor="@color/textDark"
                        android:inputType="textFilter" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeWidth="1dp"
                    android:hint="@string/description"
                    app:helperText="@string/helper_text_desciption"
                    app:counterMaxLength="240"
                    app:hintEnabled="true"
                    app:helperTextEnabled="true"
                    app:counterEnabled="true"
                    app:errorEnabled="true"
                    android:layout_marginBottom="16dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_field_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="240"
                        android:textColor="@color/textDark"
                        android:maxLines="3"
                        android:inputType="textMultiLine|textNoSuggestions"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/step_one_subtitle"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:layout_marginBottom="16dp"
                    >
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_layout_goal"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:boxStrokeWidth="1dp"
                        android:hint="@string/goal"
                        app:helperText="@string/text_helper_goal"
                        app:counterMaxLength="60"
                        app:hintEnabled="true"
                        app:helperTextEnabled="true"
                        app:counterEnabled="true"
                        app:errorEnabled="true"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/text_field_goal"
                            android:layout_width="match_parent"
                            android:layout_height="56dp"
                            android:maxLines="1"
                            android:lines="1"
                            android:singleLine="true"
                            android:maxLength="60"
                            android:textColor="@color/textDark"
                            android:inputType="textFilter" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <ImageButton
                        android:id="@+id/button_add_goal"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="0dp"
                        android:layout_marginStart="8dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_add_circle"
                        android:tint="@color/colorPrimaryLight"
                        android:background="?attr/selectableItemBackgroundBorderless" />
                    <Button
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add"/>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_goal"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    tools:listitem="@layout/list_item_removable"/>
            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</layout>
